--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "axios": "^1.6.0",
         "dotenv": "^17.2.3",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "node-telegram-bot-api": "^0.67.0"
     }
 }
