--- a/env.example
+++ b/env.example
@@ -2,10 +2,10 @@ API_KEY=Your_API_Key
 Z_IMAGE_SESSION=Your_Session_Token
 PORT=Your_Port
 
-# Optional: Public URL (for tunnels/proxies)
+# Optional: Public URL if you are testing it locally (for tunnels/proxies)
 PUBLIC_URL=https://your-tunnel-url.com
 
-# Optional: Specific Cookies
+#: Specific Cookies
 Z_COOKIE_WBKFRO=Optional_c_WBKFRo_Value
 Z_COOKIE_ACW_TC=Optional_acw_tc_Value
 Z_COOKIE_C=Optional_c_Value
@@ -15,6 +15,7 @@ Z_COOKIE_SSXMOD2=Optional_ssxmod_itna2_Value
 # Optional: Custom User Agent
 Z_USER_AGENT=Optional_User_Agent_String
 
-# Optional: Telegram Bot Token
+#: Telegram Bot Token
 TELEGRAM_BOT_TOKEN=Your_telegram_bot_token
 TELEGRAM_CHAT_ID=Your_telegram_chat_id
+
